// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text CSS Properties can be passed as props 1`] = `
<span
  className="default-0-2-1"
  style={
    Object {
      "color": undefined,
      "fontSize": "2.70vmin",
      "fontWeight": "normal",
      "opacity": 0.4,
      "textDecoration": "underline",
    }
  }
>
  My custom text
</span>
`;

exports[`Text Can customize color via props 1`] = `
<span
  className="default-0-2-1"
  style={
    Object {
      "color": "#F45B69",
      "fontSize": "2.70vmin",
      "fontWeight": "normal",
    }
  }
>
  My custom text
</span>
`;

exports[`Text Can specify font-size via props 1`] = `
Array [
  <h4
    className="default-0-2-1"
    style={
      Object {
        "color": undefined,
        "fontSize": "4.22vmin",
        "fontWeight": 700,
      }
    }
  >
    My custom text
  </h4>,
  <h3
    className="default-0-2-1"
    style={
      Object {
        "color": undefined,
        "fontSize": "5.27vmin",
        "fontWeight": 700,
      }
    }
  >
    My custom text
  </h3>,
]
`;

exports[`Text Can specify weight via props 1`] = `
<span
  className="default-0-2-1"
  style={
    Object {
      "color": undefined,
      "fontSize": "2.70vmin",
      "fontWeight": 700,
    }
  }
>
  My custom text
</span>
`;
